2020-01-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro geda_get_widget_in_destruction.

2020-01-22 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_toggle_action.h: Add pointer to action_name to the
      _GedaToggleAction structure.

    * src/widgets/geda_action.c: Revise geda_action_get_action_name to
      handle the case the actions is a GedaToggleAction.

    * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to handle
      the case when GSEAL_ENABLE is defined by utilizing macros, specifically
      geda_get_widget_style and geda_get_widget_window and use gtk_render_frame
      and gtk_render_background instead of gtk_paint_flat_box when Gtk > 2.

    * src/widgets/geda_check_menu_item.c: Revise geda_real_check_menu_item_
      draw_indicator to utilize geda_get_widget_allocation.

    * src/widgets/geda_toggle_action.c: Revise geda_toggle_action_new to
      make a copy of the action_name.

2020-01-21 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro geda_get_widget_style to handle
      the case when GSEAL_ENABLE is defined.

    * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to not
      bother checking and setting state_type to GTK_STATE_ACTIVE or
      GTK_STATE_PRELIGHT since alpha is only varied if state_type is
      GTK_STATE_INSENSITIVE. Revise geda_bulb_instance_init to utilize
      g_object_set to set the "border_width" property.

    * src/widgets/geda_check_menu_item.c Add x_thickness and revise
      geda_real_check_menu_item_draw_indicator to compile when GSEAL_ENABLE.

    * src/widgets/geda_combobox.c: Add ancillary parent and utilize
      geda_get_widget_parent macro in geda_combo_box_add, comment out
      old hack to set GtkEntry->is_cell_renderer, which does not appear
      to have any impact on the allocation.

2020-01-20 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all of gtk.h:
